--- a/prototipo.org
+++ b/prototipo.org
@@ -2,6 +2,7 @@
 # (defun c () (interactive) (eek "C-c C-e h h"))
 # (defun c () (interactive) (eek "C-c C-e l p"))
 # (defun v () (interactive) (brg "~/ORG/prototipo.html"))
+# (defun v () (interactive) (brff "~/ORG/prototipo.html"))
 # (defun e () (interactive) (find-angg "ORG/prototipo.org"))
 
 #+TITLE: Protótipo
@@ -34,92 +35,92 @@
 
 ** Requisitos para representar uma EDO simbolicamente no python usando sympy
 
-   Para representar uma EDO usando sympy em primeiro lugar temos que importar a bilioteca sympy
+Para representar uma EDO usando sympy em primeiro lugar temos que importar a bilioteca sympy
 
-   #+begin_src python :session :exports code
-     import sympy as sym
-   #+end_src
+#+begin_src python :session :exports code
+  import sympy as sym
+#+end_src
 
-   #+RESULTS:
+#+RESULTS:
 
-   Agora utilizando a biblioteca devemos criar uma função indefinida, que será usada para descrever a EDO de forma simbólica
+Agora utilizando a biblioteca devemos criar uma função indefinida, que será usada para descrever a EDO de forma simbólica
 
-   #+begin_src python :session :exports code
-     f = sym.Function('f')
-   #+end_src
+#+begin_src python :session :exports code
+  f = sym.Function('f')
+#+end_src
 
-   #+RESULTS:
+#+RESULTS:
 
-   E a função deve ter uma variavel
+E a função deve ter uma variavel
 
-   #+begin_src python :session :exports code
-     x = sym.symbols('x')
-   #+end_src
+#+begin_src python :session :exports code
+  x = sym.symbols('x')
+#+end_src
 
-   #+RESULTS:
+#+RESULTS:
 
-   Agora podemos representar uma função indefinida na variável x usando
+Agora podemos representar uma função indefinida na variável x usando
 
-   #+begin_src python :session :exports code
-     f(x)
-   #+end_src
+#+begin_src python :session :exports code
+  f(x)
+#+end_src
 
-   #+RESULTS:
-   : f(x)
+#+RESULTS:
+: f(x)
    
-   #+begin_src python :session :exports results :results output drawer :post scrWrapEquation(outp=*this*)
-     print(sym.latex(f(x)))
-   #+end_src
+#+begin_src python :session :exports results :results output drawer :post scrWrapEquation(outp=*this*)
+  print(sym.latex(f(x)))
+#+end_src
 
-   #+RESULTS:
-   :results:
-   \begin{equation}
-   f{\left(x \right)}
-   \end{equation}
-   :end:
+#+RESULTS:
+:results:
+\begin{equation}
+f{\left(x \right)}
+\end{equation}
+:end:
 
 ** EDO
 
-   Agora que já sabemos como representar uma função indefinida no sympy precisamos saber representar suas derivadas.
-   Para isso devemos usar o método diff() presente nas expressões do sympy.
-   Ele recebe uma variável como parâmetro e retorna a derivada da função naquela variável se avalia-la.
-   Pode-se passar mais de uma variável como parâmetro, nesse caso será aplicada uma derivada em sequencia da outra.
-   Então diff(x, x) representa a derivada de segunda ordem.
+Agora que já sabemos como representar uma função indefinida no sympy precisamos saber representar suas derivadas.
+Para isso devemos usar o método diff() presente nas expressões do sympy.
+Ele recebe uma variável como parâmetro e retorna a derivada da função naquela variável se avalia-la.
+Pode-se passar mais de uma variável como parâmetro, nesse caso será aplicada uma derivada em sequencia da outra.
+Então diff(x, x) representa a derivada de segunda ordem.
    
-   #+begin_src python :session :exports code
-     edo = f(x).diff(x) - x**3 / sym.exp(2*f(x))
-   #+end_src
+#+begin_src python :session :exports code
+  edo = f(x).diff(x) - x**3 / sym.exp(2*f(x))
+#+end_src
 
-   #+RESULTS:
+#+RESULTS:
 
-   #+begin_src python :session :results output drawer :exports results :post scrWrapEquation(outp=*this*)
-     print(sym.latex(sym.Eq(edo,0)))
-   #+end_src
+#+begin_src python :session :results output drawer :exports results :post scrWrapEquation(outp=*this*)
+  print(sym.latex(sym.Eq(edo,0)))
+#+end_src
 
-   #+RESULTS:
-   :results:
-   \begin{equation}
-   - x^{3} e^{- 2 f{\left(x \right)}} + \frac{d}{d x} f{\left(x \right)} = 0
-   \end{equation}
-   :end:
+#+RESULTS:
+:results:
+\begin{equation}
+ x^{3} e^{- 2 f{\left(x \right)}} + \frac{d}{d x} f{\left(x \right)} = 0
+\end{equation}
+:end:
 
-   Para encontrar as soluções dessa edo, usaremos a função dsolve() que recebe como parâmetro uma equação e uma funçao matemática
-   Passaremos nossa variável edo como a equação, e f(x) como a função matemática.
-   Mesmo edo não sendo uma equação, e sim uma expressão, nós podemos passa-la como parâmetro porque as expressões em sympy são consideradads automaticamente como igualadas a zero por qualquer solver.
+Para encontrar as soluções dessa edo, usaremos a função dsolve() que recebe como parâmetro uma equação e uma funçao matemática
+Passaremos nossa variável edo como a equação, e f(x) como a função matemática.
+Mesmo edo não sendo uma equação, e sim uma expressão, nós podemos passa-la como parâmetro porque as expressões em sympy são consideradads automaticamente como igualadas a zero por qualquer solver.
 
-   #+begin_src python :session :exports code
-     sol = sym.dsolve(edo, f(x))
-   #+end_src
+#+begin_src python :session :exports code
+  sol = sym.dsolve(edo, f(x))
+#+end_src
 
-   #+RESULTS:
+#+RESULTS:
 
-   #+begin_src python :session :results output drawer :exports results :post scrWrapEquation(outp=*this*)
-     print(sym.latex(sol))
-   #+end_src
+#+begin_src python :session :results output drawer :exports results :post scrWrapEquation(outp=*this*)
+  print(sym.latex(sol))
+#+end_src
 
-   #+RESULTS:
-   :results:
-   \begin{equation}
+#+RESULTS:
+:results:
+\begin{equation}
 
-   \end{equation}
-   :end:
+\end{equation}
+:end:
